update to index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">John Oluleke-Oke</h1>
-                <h6 class="header-mono" >A proessional video editor and cinematographer</h6>
+                <h6 class="header-mono" >A professional video editor and cinematographer</h6>
                 <a href="https://drive.google.com/file/d/13ExG_hCh99Y1HZ5HsRbimBrP9jUhp2KL/view?usp=sharing" target="_blank"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button></a>
             </div>
         </div>
