--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <h6 class="title text-danger">07/2018 - 09/2018</h6>
                             <P>Software Dev Intern</P>
                             <P class="subtitle">To write basic html script from sections of a main website.</P>
-                            <p class="subtitle">Provide geberal work area support</p>
+                            <p class="subtitle">Provide general work area support</p>
                             <hr>
                             <h6 class="title text-danger">05/2020 - Present</h6>
                             <P>Video Editor, videographer, J StaR Films (Freelance)</P>
